[package]
name = "yang-codegen"
description = "Codegen library for YANG that generates Rust struct based on YANG modules"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
yang-parser = { version = "0.1.0", path = "../yang-parser" }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.32"
